[workspace]

members = [
    "crates/dbs-address-space",
    "crates/dbs-allocator",
    "crates/dbs-arch",
    "crates/dbs-boot",
    "crates/dbs-device",
    "crates/dbs-legacy-devices",
    "crates/dbs-virtio-devices",
    "crates/dbs-utils",
    "crates/dbs-interrupt",
]

[patch.'crates-io']
fuse-backend-rs = { path="/home/wanglei01/opt/work/fuse-upstream" }
