[workspace]

members = [
    "crates/dbs-address-space",
    "crates/dbs-allocator",
    "crates/dbs-arch",
    "crates/dbs-boot",
    "crates/dbs-device",
    "crates/dbs-legacy-devices",
    "crates/dbs-virtio-devices",
    "crates/dbs-utils",
    "crates/dbs-interrupt",
]

[patch.'https://github.com/dragonflyoss/image-service']
rafs = { git = "https://github.com/wllenyj/image-service.git", rev = "e9810c023d300b72a3ffcf4a918e18eb0618cf98" }
blobfs = { git ="https://github.com/wllenyj/image-service.git", rev = "e9810c023d300b72a3ffcf4a918e18eb0618cf98" }
